deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: jenkins-deployment-replicas
  labels:
    app: jenkins-set
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  selector:
    matchLabels:
      app: jenkins-replica
  template:
    metadata:
      labels:
        app: jenkins-replica
    spec:
      containers:
        - name:  jenkins
          image: jenkins/jenkins:latest
          resources:
            limits:
              memory: "250Mi"
              cpu: "0.8"
            requests:
              memory: "250Mi"
              cpu: "0.4"
          ports:
          - containerPort: 8080
