pvt-dockerimage.yml
apiVersion: v1
kind: Pod
metadata:
  name: private-tom-pod
  labels:
    app: tomcat
spec:
  containers:
    - name: tomcat
      image: harshithkg/tomcat:latest
      ports:
        - containerPort: 8080
  imagePullSecrets:
    - name: kg-regcred
