container-replicaset.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-nodeport
spec:
  type: NodePort
  selector:
    my-pod: my-jenkins
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30008
