jenkins-deployment-EBS.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  labels:
    app: jenkins-set
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: jenkins-set
  template:
    metadata:
      labels:
        app: jenkins-set
    spec:
      volumes:
        - name: ebs-pvc
          persistentVolumeClaim:
            claimName: ebs-static-pvc
      containers:
      - name: jenkins
        image: jenkins/jenkins:latest
        volumeMounts:
          - mountPath: /var/jenkins_home
            name: ebs-pvc
        ports:
        - containerPort: 8080
      securityContext:
        runAsUser: 0
        fsGroup: 0



---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-nodeport
spec:
  type: NodePort
  selector:
    app: jenkins-set
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30008
