jenkins-deployment-hostname.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  labels:
    app: jenkins-set
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app: jenkins-set
  template:
    metadata:
      labels:
        app: jenkins-set
    spec:
      volumes:
        - name: jenkins-vol
          persistentVolumeClaim:
            claimName: local-pvc
      containers:
      - name: jenkins
        image: jenkins/jenkins:latest
        volumeMounts:
          - mountPath: /var/jenkins_home
            name: jenkins-vol
        ports:
        - containerPort: 8080



---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-nodeport
spec:
  type: NodePort
  selector:
    app: jenkins-set
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30003
