jenkins-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-node
  labels: 
    app: myjenkins
spec:
  selector:
    app: myjenkins
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
