jenkins.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: jenkins
  labels:
    my-pod: my-jenkins
spec:
  containers:
    - name: jenkins
      image: jenkins/jenkins:latest

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-loadbalancer
spec:
  type: LoadBalancer
  selector:
    my-pod: my-jenkins
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
