tomcat-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-nodeport
spec:
  type: NodePort
  selector:
    app: tomcat
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30008
